<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="vm"
            type="woowacourse.shopping.presentation.shoppingcart.ShoppingCartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.shoppingcart.ShoppingCartActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected_goods_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:selectedGoodsList="@{vm.items}"
            app:layout_constraintBottom_toTopOf="@id/cl_page_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_page_info"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:visibility="@{vm.showPageController ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_selected_goods_list">

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> vm.decreasePage()}"
                android:id="@+id/btn_previous_page"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_previous_page"
                android:text="@string/btn_previous_page"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:backgroundTint="@{vm.hasPreviousPage ? @color/primary_color : @color/light_gray}"
                android:enabled="@{vm.hasPreviousPage ? true : false}"
                app:layout_constraintBottom_toBottomOf="@id/tv_page"
                app:layout_constraintEnd_toStartOf="@id/tv_page"
                app:layout_constraintTop_toTopOf="@id/tv_page" />

            <TextView
                android:id="@+id/tv_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@{String.valueOf(vm.page + 1)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> vm.increasePage()}"
                android:id="@+id/btn_next_page"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_next_page"
                android:backgroundTint="@{vm.hasNextPage ? @color/primary_color : @color/light_gray}"
                android:text="@string/btn_next_page"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:enabled="@{vm.hasNextPage ? true : false}"
                app:layout_constraintBottom_toBottomOf="@id/tv_page"
                app:layout_constraintStart_toEndOf="@id/tv_page"
                app:layout_constraintTop_toTopOf="@id/tv_page" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
