...
            android:scaleType="centerCrop"
            app:goodsImage="@{goods.imageUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_goods_name" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:onClick="@{() -> shoppingCartClickListener.onDeleteGoods(goods)}"
            android:src="@drawable/btn_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/cl_goods_count"
            layout="@layout/view_quantity_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toTopOf="@id/tv_goods_price"
            app:layout_constraintEnd_toEndOf="parent"
...
