<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/btn_quantity_minus"
        android:layout_width="42dp"
        android:layout_height="0dp"
        android:background="@drawable/style_left_quantity_arrow"
        android:text="@string/quantity_minus"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1:1"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_quantity"
        android:background="@color/white"
        android:layout_width="42dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/btn_quantity_minus"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0"
        android:gravity="center"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/btn_quantity_plus"
        android:background="@drawable/style_right_quantity_arrow"
        android:layout_width="42dp"
        android:layout_height="0dp"
        android:includeFontPadding="false"
        app:layout_constraintDimensionRatio="1:1"
        android:text="@string/quantity_plus"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/tv_quantity"
        app:layout_constraintTop_toTopOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>